--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <div class="container d-none book-form">
       <div class="d-flex justify-content-center">
         <div class="user_card">
+          <!-- create remove toggle  -->
+          <div class="remove-icon-box">
+            <button class="remove-btn remove-icon"><i class="fa fa-times" aria-hidden="true"></i></button>
+          </div>
           <div class="d-flex justify-content-center">
             <div class="brand_logo_container">
               <i class="fa fa-book logo-book fa-5x" aria-hidden="true"></i>
@@ -88,12 +92,12 @@
               <p class="pages-text" id='p-num'>230</p>
             </div>
             <div class="book-item book-read">
-              <button type="button" class="btn btn-primary">Read</button>
+              <button type="button" id='toggle' class="btn btn-primary">Finished</button>
             </div>
           </div>
           <div class="card-footer d-flex">
             <small class="text-muted">Remove</small>
-            <button class="remove-btn remove-icon"><i class="fa fa-times" aria-hidden="true"></i></button>
+            <button class="remove-btn remove-icon"><i class="fa fa-trash align-top" aria-hidden="true"></i></button>
           </div>
         </div>
       </div>
@@ -113,12 +117,12 @@
               <p class="pages-text" id='p-num'>230</p>
             </div>
             <div class="book-item book-read">
-              <button type="button" class="btn btn-primary">Read</button>
+              <button type="button" id='toggle' class="btn btn-primary">Finished</button>
             </div>
           </div>
           <div class="card-footer d-flex">
             <small class="text-muted">Remove</small>
-            <button class="remove-btn remove-icon"><i class="fa fa-times" aria-hidden="true"></i></button>
+            <button class="remove-btn remove-icon"><i class="fa fa-trash align-top" aria-hidden="true"></i></button>
           </div>
         </div>
       </div>
@@ -138,12 +142,12 @@
               <p class="pages-text" id='p-num'>230</p>
             </div>
             <div class="book-item book-read">
-              <button type="button" class="btn btn-primary">Read</button>
+              <button type="button" id='toggle' class="btn btn-primary">Finished</button>
             </div>
           </div>
           <div class="card-footer d-flex">
             <small class="text-muted">Remove</small>
-            <button class="remove-btn remove-icon"><i class="fa fa-times" aria-hidden="true"></i></button>
+            <button class="remove-btn remove-icon"><i class="fa fa-trash align-top" aria-hidden="true"></i></button>
           </div>
         </div>
       </div>
@@ -163,12 +167,12 @@
               <p class="pages-text" id='p-num'>230</p>
             </div>
             <div class="book-item book-read">
-              <button type="button" class="btn btn-primary">Read</button>
+              <button type="button" id='toggle' class="btn btn-primary">Finished</button>
             </div>
           </div>
           <div class="card-footer d-flex">
             <small class="text-muted">Remove</small>
-            <button class="remove-btn remove-icon"><i class="fa fa-times" aria-hidden="true"></i></button>
+            <button class="remove-btn remove-icon"><i class="fa fa-trash align-top" aria-hidden="true"></i></button>
           </div>
         </div>
       </div>
