--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">    
   <link rel="stylesheet" href="reset.css">   
 
-  <link href='http://fonts.googleapis.com/css?family=Poppins:400,300,700' rel='stylesheet' type='text/css'>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Poppins:400,300,700' rel='stylesheet' type='text/css'> -->
   <script src="https://kit.fontawesome.com/2bb8475a75.js?fbclid=IwAR2J5tG2Om48t9bChVnrvKMIaKuzCxIwkix3sYwMuBY-lwxbHeYzu9qLmgQ"></script>
 
   <!-- <script src="script.js"></script> -->
